--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -12,7 +12,7 @@
 <div class="container">
   <main>
     <div class="py-5 text-center">
-      <h2>User form changed</h2>
+      <h2>User form</h2>
     </div>
   </main>
 
